<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Halcyon Project</name>
    <groupId>com.ebremer.HalcyonProject</groupId>
    <artifactId>HalcyonProject</artifactId>
    <packaging>pom</packaging>
    <version>1.1.0</version>
    <description>A whole slide image annotation, management, and visualization system</description>
    
    <modules>
        <module>halcyon-core</module>
        <module>Halcyon</module>
        <module>ingest</module>
    </modules>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    
    <issueManagement>
        <system>github</system>
        <url>https://github.com/halcyon-project/Halcyon/issues</url>
    </issueManagement>
    
    <developers>
        <developer>
          <id>ebremer</id>
          <name>Erich Bremer</name>
          <email>erich.bremer@stonybrook.edu</email>
          <roles>
              <role>architect</role>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <url>http://www.ebremer.com</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>tdiprima</id>
          <name>Tammy DiPrima</name>
          <email>tammy.diprima@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <url>https://bmi.stonybrookmedicine.edu/people/Tammy_DiPrima</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>jbalsamo</id>
          <name>Joseph Balsamo</name>
          <email>joseph.balsamo@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>fwang</id>
          <name>Feiqiao Wang</name>
          <email>feiqiao.wang@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
    </developers>
    
    <organization>
        <name>Stony Brook University - Biomedical Informatics</name>
        <url>https://bmi.stonybrookmedicine.edu/</url>
    </organization>
    
    <inceptionYear>2021</inceptionYear>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <exec.longClasspath>true</exec.longClasspath>
        <springboot.version>3.5.5</springboot.version>
	<resteasy.version>6.2.12.Final</resteasy.version>
        <jetty.version>12.0.25</jetty.version>
        <jena.version>5.5.0</jena.version>
        <wicket.ver>10.6.0</wicket.ver>
        <beakgraph.version>0.9.1</beakgraph.version>        
        <hilbert.ver>0.2.3</hilbert.ver>
        <commons-pool2.ver>2.12.1</commons-pool2.ver>
        <jakarta.json.version>2.1.3</jakarta.json.version> 
        <parrson.json.version>1.1.6</parrson.json.version>
        <titanium-json-ld.ver>1.6.0</titanium-json-ld.ver>
        <!--<dcm4che.ver>5.31.2</dcm4che.ver>-->
        <shiro.version>2.0.1</shiro.version>
        <jts.version>1.19.0</jts.version>
        <twelvemonkeys.version>3.12.0</twelvemonkeys.version>
        <jcommander.version>1.83</jcommander.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
        <maven-deploy-plugin.version>3.1.2</maven-deploy-plugin.version>
        <maven-dependency-plugin.version>3.7.0</maven-dependency-plugin.version>
        <native-maven-plugin.version>0.10.6</native-maven-plugin.version>
        <jpackage-maven-plugin.version>1.6.6</jpackage-maven-plugin.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native-maven-plugin}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${springboot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>apache-jena-libs</artifactId>
                <version>${jena.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-querybuilder</artifactId>
                <version>${jena.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-permissions</artifactId>
                <type>jar</type>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-fuseki-main</artifactId>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.1.8</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.40</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-tiff</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <dependency>
                <groupId>com.apicatalog</groupId>
                <artifactId>titanium-json-ld</artifactId>
                <version>${titanium-json-ld.ver}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>BeakGraph</artifactId>
                <version>${beakgraph.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.apicatalog</groupId>
                        <artifactId>titanium-json-ld</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.locationtech.jts</groupId>
                <artifactId>jts-core</artifactId>
                <version>${jts.version}</version>
            </dependency>
             <dependency>
                <groupId>org.jcommander</groupId>
                <artifactId>jcommander</artifactId>
                <version>${jcommander.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-io</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-util</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-security</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-http</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-xml</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-client</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-alpn-client</artifactId>
                <version>${jetty.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
          <id>halcyon</id>
            <name>Halcyon</name>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>halcyon</id>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
    </distributionManagement>
        <build>
        <!--<finalName>library-${project.version}</finalName>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <id>libraryshade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"></transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
